@@ -15,7 +15,7 @@ $EM_CONF[$_EXTKEY] = array(
 	'description' => 'Adds a plugin for subscription to direct mail newsletters',
 	'category' => 'plugin',
 	'shy' => 0,
-	'version' => '1.4.4',
+	'version' => '1.4.5',
 	'dependencies' => 'tt_address',
 	'conflicts' => '',
 	'priority' => '',
