@@ -1,5 +1,8 @@
+2015-11-20 Robert Heel <typo3@bobosch.de>
+	* Security fix: Use GET params instead of a session.
+
 2015-04-23 Robert Heel <typo3@bobosch.de>
-        * Add: Hebrew FE translation (Thanks to Oleg Sverdlov).
+	* Add: Hebrew FE translation (Thanks to Oleg Sverdlov).
 
 2014-11-16 Robert Heel <typo3@bobosch.de>
 	* Bugfix: Compatibility to TYPO3 6.2.
